examples/test/testpolicy18459.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18459
  namespace: namespace394
spec:
  podSelector:
    matchLabels:
      key6: value22
      key20: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value2
          key9: value13
      podSelector:
        matchLabels:
          key0: value23
